--- a/install_apache.yml
+++ b/install_apache.yml
@@ -12,3 +12,12 @@
         - "{{ tmux_pack }}"
       state: latest  
       update_cache: yes
+
+  - name: copy index.html to default server page
+    tags: apache,httpd
+    copy:
+      src: default_site.html
+      dest: /var/www/html/host1/index.html
+      owner: root
+      group: root
+      mode: 0644
